<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.placeslist.PlacesFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_search_places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_places"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search_places"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <HorizontalScrollView
            android:id="@+id/chipScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_search_places">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_filter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip2"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="10024"
                    android:text="@string/movie_theatre" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip3"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="10027"
                    android:text="@string/museum" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip4"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="10044"
                    android:text="@string/planetarium" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip5"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="11124"
                    android:text="@string/office" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip6"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="13055"
                    android:text="@string/fried_chicken_joint" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip7"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="13064"
                    android:text="@string/pizzeria" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipScrollView"
            tools:duration="800">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/placeholder_places_item_layout" />

                <include layout="@layout/placeholder_places_item_layout" />

                <include layout="@layout/placeholder_places_item_layout" />

                <include layout="@layout/placeholder_places_item_layout" />

                <include layout="@layout/placeholder_places_item_layout" />

                <include layout="@layout/placeholder_places_item_layout" />

                <include layout="@layout/placeholder_places_item_layout" />

                <include layout="@layout/placeholder_places_item_layout" />

                <include layout="@layout/placeholder_places_item_layout" />

                <include layout="@layout/placeholder_places_item_layout" />
            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/placesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipScrollView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>